Refactor: moved class + extracted method

--- a/KataFizzBuzzTest/KataFizzBuzzTest.csproj
+++ b/KataFizzBuzzTest/KataFizzBuzzTest.csproj
@@ -59,6 +59,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\KataFizzBuzz\KataFizzBuzz.csproj">
+      <Project>{D6213EF9-FB95-4CF5-9DE8-F70AC2B849E7}</Project>
+      <Name>KataFizzBuzz</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
